--- a/src/components/markdown/markdown.scss
+++ b/src/components/markdown/markdown.scss
@@ -9,10 +9,11 @@
 //----------------------------
 // Flex
 //----------------------------
-.ibm--flex {
+.container .ibm--flex {
   @include breakpoint('md') {
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
   }
 }
 
